--- a/src/main/resources/templates/system/car/timeCoupon/add.html
+++ b/src/main/resources/templates/system/car/timeCoupon/add.html
@@ -31,7 +31,7 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">时长劵(张)：</label>
                             <div class="col-sm-8">
-                                <label><input id="freeTime" name="freeTime" class="form-control" type="text"></label>
+                                <label><input id="freeTime" name="timeCoupon" class="form-control" type="text"></label>
                             </div>
                         </div>
                         <div class="form-group">
