--- a/src/main/resources/templates/h5/mobile/carTimeCoupon/detailTimeCoupon.html
+++ b/src/main/resources/templates/h5/mobile/carTimeCoupon/detailTimeCoupon.html
@@ -47,7 +47,7 @@
                     <p>车主姓名<span>${data.data.name}</span></p>
                     <p>联系方式<span>${data.data.phone}</span></p>
                     <p>免费时长<span>${data.data.freeTime}分钟</span></p>
-                    <p>费用<span>${data.data.cost}</span></p>
+                    <p>时长劵<span>${data.data.timeCoupon}</span></p>
                 </div>
             `
             $("#detail").html(json);
