--- a/src/main/resources/templates/h5/mobile/carTimeCoupon/addTimeCoupon.html
+++ b/src/main/resources/templates/h5/mobile/carTimeCoupon/addTimeCoupon.html
@@ -20,10 +20,10 @@
                     <label>车牌号</label>
                     <input id="number" name="number" type="text" class="mui-input-clear mui-input" placeholder="请输入车牌号">
                 </div>
-                 <div class="mui-input-row">
+<!--                 <div class="mui-input-row">
                     <label>时长劵(张)</label>
                     <input id="timeCoupon"  name="timeCoupon" type="number" class="mui-input-clear mui-input" placeholder="请输入时长劵">
-                </div>
+                </div>-->
                 <div class="mui-input-row">
                     <label>车主姓名</label>
                     <input name="name" type="text" class="mui-input-clear mui-input" placeholder="请输入车主姓名">
@@ -47,6 +47,7 @@
                 </div>
             </div>
             <input type="hidden" name="parkingType" value="6" >
+            <input type="hidden" name="timeCoupon" value="1" >
         </form>
         <div class="mui-content-padded">
             <div class="btncont">
