--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -52,5 +52,5 @@
 	<script src="/js/export/bootstrap-table-export.js"></script>
 	<script src="/js/export/tableexport.js"></script>
 
-
+	<script src="/js/webuploader.html5only.min.js"></script>
 </div>
