--- a/src/main/resources/templates/system/billing/add.html
+++ b/src/main/resources/templates/system/billing/add.html
@@ -15,7 +15,7 @@
                         <!--<input id="parkingId" name="parkingId" class="form-control" type="text">-->
                         <!--</div>-->
                         <!--</div>-->
-
+                        <input id="dayCost" name="dayCost" class="form-control" type="hidden" value="0">
                         <div class="form-group">
                             <label class="col-sm-3 control-label">停车场</label>
                             <div class="col-sm-8">
@@ -60,12 +60,12 @@
                                               type="text"></label>
                             </div>
                         </div>
-                        <div class="form-group">
+<!--                        <div class="form-group">
                             <label class="col-sm-3 control-label">24小时最高收费：</label>
                             <div class="col-sm-8">
-                                <label><input id="dayCost" name="dayCost" class="form-control" type="text"></label>
+                                <label><input id="dayCost" name="dayCost" class="form-control" type="hidden" value="0"></label>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="form-group">
                             <label class="col-sm-3 control-label">时长劵时间(分钟)：</label>
                             <div class="col-sm-8">
