--- a/src/main/resources/templates/system/car/long/car.html
+++ b/src/main/resources/templates/system/car/long/car.html
@@ -23,6 +23,12 @@
                                 onclick="batchRemove()">
                             <i class="fa fa-trash" aria-hidden="true"></i>删除
                         </button>
+                        <button type="button" class="btn  btn-danger" id="J_download">
+                            <i class="fa fa-long-arrow-down" aria-hidden="true"></i>下载导入模板
+                        </button>
+                        <button type="button" class="btn  btn-danger" id="J_upload">
+                            <i class="fa fa-long-arrow-up" aria-hidden="true"></i>导入
+                        </button>
                     </div>
                     <div class="input-right">
                         <div class="columns pull-right">
