--- a/src/main/resources/templates/system/car/timeCoupon/add.html
+++ b/src/main/resources/templates/system/car/timeCoupon/add.html
@@ -10,6 +10,7 @@
                 <div class="ibox-content">
                     <form class="form-horizontal m-t" id="signupForm">
                         <input id="parkingType" name="parkingType" value="6" type="hidden">
+                        <input id="freeTime" name="timeCoupon" value="1" type="hidden">
                         <div class="form-group">
                             <label class="col-sm-3 control-label">车牌号：</label>
                             <div class="col-sm-8">
@@ -28,12 +29,12 @@
                                 <label><input id="phone" name="phone" class="form-control" type="text"></label>
                             </div>
                         </div>
-                        <div class="form-group">
+<!--                        <div class="form-group">
                             <label class="col-sm-3 control-label">时长劵(张)：</label>
                             <div class="col-sm-8">
                                 <label><input id="freeTime" name="timeCoupon" class="form-control" type="text"></label>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="form-group">
                             <label class="col-sm-3 control-label">状态:</label>
                             <div class="col-sm-8">
