--- a/src/main/resources/templates/system/business/edit.html
+++ b/src/main/resources/templates/system/business/edit.html
@@ -46,6 +46,13 @@
 							</div>
 						</div>
 						<div class="form-group">
+							<label class="col-sm-3 control-label">商户类型：</label>
+							<div class="col-sm-8">
+								<label><input name="type" value="1" type="radio" th:field="*{user.type}">普通商户</label>
+								<label><input name="type" value="2" type="radio" th:field="*{user.type}">时长劵商户</label>
+							</div>
+						</div>
+						<div class="form-group">
 							<label class="col-sm-3 control-label">状态:</label>
 							<div class="col-sm-8">
 								<label class="radio-inline"> <input
