--- a/src/main/resources/templates/system/car/long/add.html
+++ b/src/main/resources/templates/system/car/long/add.html
@@ -100,14 +100,8 @@
 		lay('#version').html('-v'+ laydate.v);
 
 		//执行一个laydate实例
-		laydate.render({
-			elem: '#beginDate'
-			,theme: 'molv'
-		});
-		laydate.render({
-			elem: '#endDate'
-			,theme: 'molv'
-		});
+		laydate.render({elem: '#beginDate',theme: 'molv'});
+		laydate.render({elem: '#endDate',theme: 'molv'});
 	</script>
 </body>
 </html>
