--- a/src/main/resources/templates/system/billing/billing.html
+++ b/src/main/resources/templates/system/billing/billing.html
@@ -20,6 +20,19 @@
 								<i class="fa fa-trash" aria-hidden="true"></i>删除
 							</button>
 						</div>
+						<div class="input-right">
+							<div class="columns pull-right">
+								<button class="btn btn-success" onclick="reLoad()">查询</button>
+							</div>
+							<div class="pull-right search nopadding">
+								<select id="parkingId" name="parkingId" class="form-control">
+									<option value="">选择停车场</option>
+									<option th:each="parking:${parkingList}" th:value="${parking.id}"
+											th:text="${parking.name}">
+									</option>
+								</select>
+							</div>
+						</div>
 					</div>
 					<table id="exampleTable" data-mobile-responsive="true">
 					</table>
