--- a/src/main/resources/templates/system/businessTransaction/businessTransaction.html
+++ b/src/main/resources/templates/system/businessTransaction/businessTransaction.html
@@ -8,17 +8,12 @@
 			<div class="ibox">
 				<div class="ibox-body">
 					<div class="fixed-table-toolbar">
-						<!--<div class="columns pull-right col-md-2 nopadding">-->
-							<!--<button class="btn btn-success" onclick="reLoad()">查询</button>-->
-						<!--</div>-->
-						<!--<div class="pull-right search col-md-2 nopadding">-->
-							<!--<select id="parkingId" name="parkingId" class="form-control">-->
-								<!--<option value="">选择停车场</option>-->
-								<!--<option th:each="parking:${parkingList}" th:value="${parking.id}"-->
-										<!--th:text="${parking.name}">-->
-								<!--</option>-->
-							<!--</select>-->
-						<!--</div>-->
+						<div class="columns pull-right col-md-2 nopadding">
+							<button class="btn btn-success" onclick="reLoad()">查询</button>
+						</div>
+						<div class="columns pull-right nopadding">
+							<input id="carNumber" type="text" class="form-control">
+						</div>
 					</div>
 					<table id="exampleTable" data-mobile-responsive="true">
 					</table>
