--- a/src/main/resources/templates/system/businessTransaction/businessTransaction.html
+++ b/src/main/resources/templates/system/businessTransaction/businessTransaction.html
@@ -2,17 +2,22 @@
 <html>
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
+<style>
+	.input-right{position: absolute;right: 200px;}
+</style>
 <body class="gray-bg">
 	<div class="wrapper wrapper-content ">
 		<div class="col-sm-12">
 			<div class="ibox">
 				<div class="ibox-body">
-					<div class="fixed-table-toolbar">
-						<div class="columns pull-right col-md-2 nopadding">
-							<button class="btn btn-success" onclick="reLoad()">查询</button>
-						</div>
-						<div class="columns pull-right nopadding">
-							<input id="carNumber" type="text" class="form-control">
+					<div class="fixed-table-toolbar" style="position: relative;">
+						<div class="input-right">
+							<div class="columns pull-right">
+								<button class="btn btn-success" onclick="reLoad()">查询</button>
+							</div>
+							<div class="columns pull-right">
+								<input id="carNumber" type="text" class="form-control">
+							</div>
 						</div>
 					</div>
 					<table id="exampleTable" data-mobile-responsive="true">
