--- a/src/main/resources/templates/h5/mobile/carTimeCoupon/listTimeCoupon.html
+++ b/src/main/resources/templates/h5/mobile/carTimeCoupon/listTimeCoupon.html
@@ -19,7 +19,7 @@
             <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
             <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
         </header>
-         <div class="user bantop" style="background: linear-gradient(-320deg,#1296db 40%,rgba(18, 150, 219,0.6));border-bottom: 10px solid #2189bf;">
+         <div class="user bantop"  style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6));border-bottom: 10px solid #f1980a;">
             <i class="iconfont icon-shanghu"></i>
             <h3>时长劵车辆</h3>
             <h5>MERCHANT MANAGEMENT</h5>
