--- a/src/main/resources/templates/h5/mobile/home.html
+++ b/src/main/resources/templates/h5/mobile/home.html
@@ -42,12 +42,12 @@
         </div>
 
         <div class="grid dribbble" >
-            <a class="mui-col-xs-4" id="longCar" ><i class="iconfont icon-yuezu"></i>月租车辆</a>
-            <a class="mui-col-xs-4" id="businessCar" ><i class="iconfont icon-shanghu"></i>商户车辆</a>
-            <a class="mui-col-xs-4" id="timeCouponCar" ><i class="iconfont icon-shanghu"></i>时长劵车辆</a>
-            <a class="mui-col-xs-4" id="vipCar" ><i class="iconfont icon-Vip"></i>VIP车辆</a>
-            <a class="mui-col-xs-4" id="recharge"><i class="iconfont icon-chongzhi"></i>商户充值</a>
-            <a class="mui-col-xs-4" id="passageway"><i class="iconfont icon-tongdao"></i>通道管理</a>
+            <a class="mui-col-xs-4" id="longCar" ><i class="iconfont icon-yuezu" style="background: linear-gradient(320deg,#6dce5b 40%,rgba(109, 206, 91,0.4));"></i>月租车辆</a>
+            <a class="mui-col-xs-4" id="businessCar" ><i class="iconfont icon-shanghu" style="background: linear-gradient(320deg,#1296db 40%,rgba(18, 150, 219,0.4));"></i>商户车辆</a>
+            <a class="mui-col-xs-4" id="timeCouponCar" ><i class="iconfont icon-youhuiquan" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6))"></i>时长劵车辆</a>
+            <a class="mui-col-xs-4" id="vipCar" ><i class="iconfont icon-Vip" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6))"></i>VIP车辆</a>
+            <a class="mui-col-xs-4" id="recharge"><i class="iconfont icon-chongzhi" style="background: linear-gradient(320deg,#e4787c 40%,rgba(228, 120, 124,0.4));"></i>商户充值</a>
+            <a class="mui-col-xs-4" id="passageway"><i class="iconfont icon-tongdao" style="background: linear-gradient(320deg,#5f6eab 40%,rgba(95, 110, 171,0.4));"></i>通道管理</a>
         </div>
 <!--        <p class="list-bot">没有更多内容啦</p>-->
     </div>
