--- a/src/main/resources/templates/h5/mobile/recharge/addRecharge.html
+++ b/src/main/resources/templates/h5/mobile/recharge/addRecharge.html
@@ -51,8 +51,8 @@
     })
 
     function check() {
-        if ($("#cost").val() == '' || $("#cost").val() <= 0) {
-            mui.toast('金额不能为空或0');
+        if ($("#cost").val() == '' || /^[1-9]\d*$/.test($("#cost").val())) {
+            mui.toast('金额必须为正整数');
             $("#name").focus();//定位
             $("#name").css("caret-color", "orangered")//光标变色
             return;
