--- a/src/main/resources/templates/system/businessTransaction/businessTransaction.html
+++ b/src/main/resources/templates/system/businessTransaction/businessTransaction.html
@@ -16,7 +16,7 @@
 								<button class="btn btn-success" onclick="reLoad()">查询</button>
 							</div>
 							<div class="columns pull-right">
-								<input id="carNumber" type="text" class="form-control">
+								<input id="carNumber" type="text" class="form-control" placeholder="车牌号">
 							</div>
 						</div>
 					</div>
