--- a/src/main/resources/templates/h5/sweepCodeRed/index.html
+++ b/src/main/resources/templates/h5/sweepCodeRed/index.html
@@ -55,7 +55,7 @@
 			<div class="payway">
 				<h3 class="tit">支付方式</h3>
 				<div><i class="iconfont icon-wechat" style="color: #3bb034;"></i>微信支付<i class="iconfont icon-danxuan" id="icon-danxuan"></i></div>
-				<!-- <div><i class="iconfont icon-ywt" style="color: #c7152d;"></i>一网通银行卡支付<i class="iconfont icon-danxuan"></i></div> -->
+				 <div><i class="iconfont icon-ywt" style="color: #c7152d;"></i>支付宝支付<i class="iconfont icon-danxuan"></i></div>
 			</div>
 			<p style="height:10px;background: #f7f7f7;"></p>
 			<div class="notice">
@@ -104,77 +104,10 @@
 			$(this).hide();
 		});
 	});
-	//点击支付
-	function payOrder() {
-		openId = $("#openId").text() ;
-		recordId = $("#recordId").text() ;
-		money = $("#cost").text() ;
-		console.log("点击支付传过来的值：" + openId + ',' +  + "," + money)
-		if(money == 0 || typeof(openId) == "undefined") {
-			alert("无需支付！");
-		}else {
-			if(typeof(openId) != "undefined" && typeof(recordId) != "undefined" && typeof(money) != "undefined") {
-				$.ajax({
-					url : '/mp/wx-pay/prepay' ,
-					type: 'POST',
-					dataType : 'json',
-					contentType: "application/json;charset=UTF-8",
-					data: JSON.stringify({openId: openId, recordId: recordId, money: money }),
-					success: function (data) {
-						console.log("[Json payOrder Data: ]" + JSON.stringify(data))
-						doBridgeReady(data);
-					},
-					error: function (res) {
-						console.log("ajax请求失败,res:" + res.toString());
-					}
-				}) ;
-			}
-		}
-	}
-	//判断浏览器是否支持JSAPI，只用微信内置浏览器可用。
-	function doBridgeReady(data){
-		if (typeof WeixinJSBridge == "undefined"){
-			if( document.addEventListener ){
-				document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
-			}else if (document.attachEvent){
-				document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
-				document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
-			}
-		}else{
-			onBridgeReady(data);
-		}
-	}
 
-	//真实支付请求
-	function onBridgeReady(data){
-		WeixinJSBridge.invoke(
-				'getBrandWCPayRequest', {
-					"appId": data.appId,     //公众号名称，由商户传入
-					"timeStamp": data.timeStamp,         //时间戳，自1970年以来的秒数
-					"nonceStr": data.nonceStr, //随机串
-					"package": data.packageValue,
-					"signType": data.signType,         //微信签名方式：
-					"paySign": data.paySign //微信签名
-				},
-				function(res){
-					if(res.err_msg == "get_brand_wcpay_request:ok" ) {
-						self.location.href="/mp/watchPay/forward?recordId=" + $("#recordId").text() ;
-					}else{
-						console.log("支付失败，提示【" + res.err_msg + "】")
-						alert("支付失败，请重新支付！");
-					}
-				}
-		);
-	}
+	$("#icon-danxuan").prop("checked", true).css("color","#699aff");
 
-	function getQueryString(name) {
-		var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
-		var r = window.location.search.substr(1).match(reg);
-		if (r != null)
-			return unescape(r[2]);
-		return null;
-	}
-	//检查车辆
+	//检查车辆状态
 	function checkCost(carNumber) {
 		flag = 1 ;
 		$.ajax({
@@ -192,7 +125,7 @@
 		}) ;
 		return flag ;
 	}
-
+	//吐司
 	function toast(msg) {
 		if("SUCCESS" != msg){
 			$(".toast span").text(msg) ;
@@ -250,10 +183,70 @@
 	}
 
 
-	$("#icon-danxuan").prop("checked", true).css("color","#699aff");
+	//微信支付：点击支付
+	function payOrder() {
+		openId = $("#openId").text() ;
+		recordId = $("#recordId").text() ;
+		money = $("#cost").text() ;
+		console.log("点击支付传过来的值：" + openId + ',' +  + "," + money)
+		if(money == 0 || typeof(openId) == "undefined") {
+			alert("无需支付！");
+		}else {
+			if(typeof(openId) != "undefined" && typeof(recordId) != "undefined" && typeof(money) != "undefined") {
+				$.ajax({
+					url : '/mp/wx-pay/prepay' ,
+					type: 'POST',
+					dataType : 'json',
+					contentType: "application/json;charset=UTF-8",
+					data: JSON.stringify({openId: openId, recordId: recordId, money: money }),
+					success: function (data) {
+						console.log("[Json payOrder Data: ]" + JSON.stringify(data))
+						doBridgeReady(data);
+					},
+					error: function (res) {
+						console.log("ajax请求失败,res:" + res.toString());
+					}
+				}) ;
+			}
+		}
+	}
+	//微信支付：判断浏览器是否支持JSAPI，只用微信内置浏览器可用。
+	function doBridgeReady(data){
+		if (typeof WeixinJSBridge == "undefined"){
+			if( document.addEventListener ){
+				document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
+			}else if (document.attachEvent){
+				document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
+				document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
+			}
+		}else{
+			onBridgeReady(data);
+		}
+	}
+	//微信支付：真实支付请求
+	function onBridgeReady(data){
+		WeixinJSBridge.invoke(
+				'getBrandWCPayRequest', {
+					"appId": data.appId,     //公众号名称，由商户传入
+					"timeStamp": data.timeStamp,         //时间戳，自1970年以来的秒数
+					"nonceStr": data.nonceStr, //随机串
+					"package": data.packageValue,
+					"signType": data.signType,         //微信签名方式：
+					"paySign": data.paySign //微信签名
+				},
+				function(res){
+					if(res.err_msg == "get_brand_wcpay_request:ok" ) {
+						self.location.href="/mp/watchPay/forward?recordId=" + $("#recordId").text() ;
+					}else{
+						console.log("支付失败，提示【" + res.err_msg + "】")
+						alert("支付失败，请重新支付！");
+					}
+				}
+		);
+	}
 
+	//以下为虚拟键盘
 	var number = carNumber;
-
 	function native_callback_ontextkey(text){
 		number += text;
 		console.log("当前车牌[KEY]：" + number);
