--- a/src/main/resources/templates/h5/sweepCodeRed/index.html
+++ b/src/main/resources/templates/h5/sweepCodeRed/index.html
@@ -45,17 +45,19 @@
 		<div class="detail">
 			<div>
 				<h3 class="tit">停车详情</h3>
-				<p>停车场:<span class="parkingName" th:text="${parkingRecord.parkingName}"></span></p>
-				<p>停车时长：<span class="takeMinutes" th:text="${parkingRecord.takeMinutesStr}"></span></p>
-				<p>入场时间:<span class="inTime" th:text="${parkingRecord.inTime}"></span></p>
-				<p>停车费:<span><em class="cost" th:text="${parkingRecord.cost}"></em>元</span></p>
+				<p>停车场<span class="parkingName" th:text="${parkingRecord.parkingName}"></span></p>
+				<p>停车时长<span class="takeMinutes" th:text="${parkingRecord.takeMinutesStr}"></span></p>
+				<p>入场时间<span class="inTime" th:text="${parkingRecord.inTime}"></span></p>
+				<p>停车费<span><em class="cost" th:text="${parkingRecord.cost}"></em>元</span></p>
 			</div>
 
 			<p style="height:10px;background: #f7f7f7;"></p>
 			<div class="payway">
 				<h3 class="tit">支付方式</h3>
 				<div><i class="iconfont icon-wechat" style="color: #3bb034;"></i>微信支付<i class="iconfont icon-danxuan" id="icon-danxuan"></i></div>
-				 <div><i class="iconfont icon-ywt" style="color: #c7152d;"></i>支付宝支付<i class="iconfont icon-danxuan"></i></div>
+			</div>
+			<div style="margin: 0;">
+				<img src="/img/h5/zhifubao.png" width="100%">
 			</div>
 			<p style="height:10px;background: #f7f7f7;"></p>
 			<div class="notice">
