--- a/src/main/resources/templates/system/parkingTradingRecord/parkingTradingRecord.html
+++ b/src/main/resources/templates/system/parkingTradingRecord/parkingTradingRecord.html
@@ -18,6 +18,9 @@
                         <div class="columns pull-right nopadding">
                             <button class="btn btn-success" onclick="reLoad()">查询</button>
                         </div>
+                        <div class="columns pull-right nopadding">
+                            <input id="carNumber" type="text" class="form-control" placeholder="车牌号">
+                        </div>
                         <div class="pull-right search nopadding">
                             <select id="parkingId" name="parkingId" class="form-control">
                                 <option value="">选择停车场</option>
